# zero-lift-simulator

./: .gitignore  DEVNOTES.md  README.md  pyproject.toml  zzero-dev-env-setup.sh
docs/: 00projectanchor-liftsim-burly-concert-gigantic-analysis-e7cf1ccf.md  00projectanchor-liftsim.md  CONTENTS.md  README.md  aberrant-prize-47d02ecb.md  adding_wiki_articles.md  agent-experience.md  alpha_sim_usage.md  analyze-examples-gruesome-church-737d4eba.md  anchor-cowardly-leather-d8f8b337.md  archived-project-anchors-ultra-tomorrow-1f27d36c.md  as_a_human_how_to_code_with_codex.md  best_practices_coding_with_codex.md  bugfix_add_deps.md  bugfix_agent_state_circular_import.md  bugfix_chair_default.md  bugfix_git_agreeable.md  bugfix_logger_filepath_finish.md  bugfix_response_logger_filepath_finish.md  bugfix_riders.md  business-value-research-prompt.md  codex_dev_process.md  config-example-cooperative-till-5d7dc731.md  dev_snippets.md  development_ref_for_prompts.md  devplan-capable-push-34aa005b.md  docstring_style_guide.md  flowchart.md  for_codex_update_toc.md  git-tools.md  high_wait_analysis.md  launching_a_simulation.md  law_simulation_book.md  main_notes_adding_wiki_articles.md  main_notes_as_a_human_how_to_code_with_codex.md  main_notes_best_practices_coding_with_codex.md  main_notes_business_value_research.md  main_notes_checkpoint_prim_classes.md  main_notes_codex_must_read_this_rules_for_codex.md  (+58 more)
docs-site/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs-src/: Makefile  conf.py  index.md
notebooks/: dev.ipynb  (+8 more)
(+280 files in other folders)
