[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-liftsim"
version = "0.1.0"
authors = [{name = "Zero Lift", email = "example@example.com"}]
description = "Zero Lift Simulator CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "GitPython",
    "jinja2>=3.0",
    "codenamize",
]

[project.scripts]
zero-liftsim = "zero_liftsim.cli:main"

[tool.setuptools.packages.find]
include = ["zero_liftsim*"]
